--- a/app/scss/modules/about-us.scss
+++ b/app/scss/modules/about-us.scss
@@ -23,7 +23,7 @@
     position: relative;
     padding: 180px 128px 180px 166px;
 
-    @include xxl {
+    @include xl {
       padding: 160px 100px 160px 124px;
     }
 
