--- a/app/css/glide.core.css
+++ b/app/css/glide.core.css
@@ -1,44 +1,79 @@
 .glide {
   position: relative;
   width: 100%;
-  box-sizing: border-box; }
-  .glide * {
-    box-sizing: inherit; }
-  .glide__track {
-    overflow: hidden; }
-  .glide__slides {
-    position: relative;
-    width: 100%;
-    list-style: none;
-    backface-visibility: hidden;
-    transform-style: preserve-3d;
-    touch-action: pan-Y;
-    overflow: hidden;
-    padding: 0;
-    white-space: nowrap;
-    display: flex;
-    flex-wrap: nowrap;
-    will-change: transform; }
-    .glide__slides--dragging {
-      user-select: none; }
-  .glide__slide {
-    width: 100%;
-    height: 100%;
-    flex-shrink: 0;
-    white-space: normal;
-    user-select: none;
-    -webkit-touch-callout: none;
-    -webkit-tap-highlight-color: transparent; }
-    .glide__slide a {
-      user-select: none;
-      -webkit-user-drag: none;
-      -moz-user-select: none;
-      -ms-user-select: none; }
-  .glide__arrows {
-    -webkit-touch-callout: none;
-    user-select: none; }
-  .glide__bullets {
-    -webkit-touch-callout: none;
-    user-select: none; }
-  .glide--rtl {
-    direction: rtl; }
+  box-sizing: border-box;
+}
+.glide * {
+  box-sizing: inherit;
+}
+.glide__track {
+  overflow: hidden;
+}
+.glide__slides {
+  position: relative;
+  width: 100%;
+  list-style: none;
+  backface-visibility: hidden;
+  transform-style: preserve-3d;
+  touch-action: pan-Y;
+  overflow: hidden;
+  padding: 0;
+}
+.glide__slides--dragging {
+  user-select: none;
+}
+.glide--slider .glide__slides,
+.glide--carousel .glide__slides {
+  white-space: nowrap;
+  display: flex;
+  flex-wrap: nowrap;
+  will-change: transform;
+}
+.glide--fade .glide__slides {
+  height: 100%;
+  will-change: opacity;
+}
+.glide__slide {
+  width: 100%;
+  height: 100%;
+  flex-shrink: 0;
+  white-space: normal;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: transparent;
+}
+.glide__slide a {
+  user-select: none;
+  -webkit-user-drag: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
+.glide--fade .glide__slide {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  z-index: -1;
+  opacity: 0;
+  /* -webkit-transition: opacity 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: opacity 400ms cubic-bezier(0.165, 0.84, 0.44, 1); */
+  -webkit-transform-style: preserve-3d;
+  -webkit-transform: translate3d(0px, 0px, 0px);
+}
+.glide--fade .glide__slide--active {
+  z-index: 1;
+  position: relative;
+  opacity: 1;
+  transition: opacity 400ms cubic-bezier(0.165, 0.84, 0.44, 1) 0.2s;
+}
+.glide__arrows {
+  -webkit-touch-callout: none;
+  user-select: none;
+}
+.glide__bullets {
+  -webkit-touch-callout: none;
+  user-select: none;
+}
+.glide--rtl {
+  direction: rtl;
+}
