--- a/app/css/main.css
+++ b/app/css/main.css
@@ -709,6 +709,10 @@ main {
     -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0); } }
 
+.glideFadeAnim {
+  -webkit-transition: opacity 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: opacity 400ms cubic-bezier(0.165, 0.84, 0.44, 1); }
+
 @-webkit-keyframes border-transform {
   0%,
   100% {
