--- a/app/scss/base/animations.scss
+++ b/app/scss/base/animations.scss
@@ -324,3 +324,8 @@
     transform: translate3d(0, 0, 0);
   }
 }
+
+.glideFadeAnim {
+  -webkit-transition: opacity 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: opacity 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
+}
