prod images passes fixes

--- a/app/scss/base/mixins.scss
+++ b/app/scss/base/mixins.scss
@@ -164,7 +164,7 @@
   background-clip: text;
   text-fill-color: transparent;
 
-  background-image: url(../../images/text-anim-bg-white.png);
+  background-image: url(../images/text-anim-bg-white.png);
   background-size: cover;
   background-repeat: no-repeat;
 }
