--- a/app/scss/modules/about-us.scss
+++ b/app/scss/modules/about-us.scss
@@ -64,7 +64,7 @@
         // padding: 0 3px;
         display: inline-block;
         height: 50px;
-        background-image: url(../../images/text-anim-bg-blue_long.svg);
+        background-image: url(../images/text-anim-bg-blue_long.svg);
         background-size: cover;
         background-repeat: no-repeat;
         background-position-x: -567px;
