--- a/app/scss/modules/contact.scss
+++ b/app/scss/modules/contact.scss
@@ -219,7 +219,7 @@
             padding: 10px 18px 10px 10px;
 
             &:after {
-              content: url(../../images/icon/arrow-right-blue_short.svg);
+              content: url(../images/icon/arrow-right-blue_short.svg);
               display: block;
               position: absolute;
 
@@ -608,7 +608,7 @@
         }
 
         &::after {
-          content: url(../../images/icon/arrow-blue.svg);
+          content: url(../images/icon/arrow-blue.svg);
           display: block;
           position: absolute;
 
