--- a/app/css/main.css
+++ b/app/css/main.css
@@ -771,7 +771,7 @@ main {
 
 .progress-wrap::after {
   position: absolute;
-  content: url(../../images/icon/progress-arrow-up.svg);
+  content: url(../images/icon/progress-arrow-up.svg);
   color: #BFBFBF;
   left: 14px;
   top: 14px;
@@ -789,7 +789,7 @@ main {
 .progress-wrap::before {
   position: absolute;
   opacity: 0;
-  content: url(../../images/icon/progress-arrow-up_hover.svg);
+  content: url(../images/icon/progress-arrow-up_hover.svg);
   left: 14px;
   top: 14px;
   height: 46px;
@@ -1490,7 +1490,7 @@ body.light .progress-wrap svg.progress-circle path {
       -ms-text-fill-color: transparent;
       background-clip: text;
       text-fill-color: transparent;
-      background-image: url(../../images/text-anim-bg-white.png);
+      background-image: url(../images/text-anim-bg-white.png);
       background-size: cover;
       background-repeat: no-repeat;
       -webkit-animation: anim 5s linear;
@@ -1536,7 +1536,7 @@ body.light .progress-wrap svg.progress-circle path {
       -ms-text-fill-color: transparent;
       background-clip: text;
       text-fill-color: transparent;
-      background-image: url(../../images/text-anim-bg-white.png);
+      background-image: url(../images/text-anim-bg-white.png);
       background-size: cover;
       background-repeat: no-repeat;
       animation: anim 1s linear 0.5s forwards; }
@@ -1573,7 +1573,7 @@ body.light .progress-wrap svg.progress-circle path {
       -ms-text-fill-color: transparent;
       background-clip: text;
       text-fill-color: transparent;
-      background-image: url(../../images/text-anim-bg-white.png);
+      background-image: url(../images/text-anim-bg-white.png);
       background-size: cover;
       background-repeat: no-repeat;
       animation: home-text-animation-main 1s linear 1s forwards; }
@@ -1667,7 +1667,7 @@ body.light .progress-wrap svg.progress-circle path {
         position: relative;
         display: inline-block;
         height: 50px;
-        background-image: url(../../images/text-anim-bg-blue_long.svg);
+        background-image: url(../images/text-anim-bg-blue_long.svg);
         background-size: cover;
         background-repeat: no-repeat;
         background-position-x: -567px; }
@@ -1704,7 +1704,7 @@ body.light .progress-wrap svg.progress-circle path {
         -ms-text-fill-color: transparent;
         background-clip: text;
         text-fill-color: transparent;
-        background-image: url(../../images/text-anim-bg-white.png);
+        background-image: url(../images/text-anim-bg-white.png);
         background-size: cover;
         background-repeat: no-repeat;
         display: inline-block;
@@ -2439,7 +2439,7 @@ body.light .progress-wrap svg.progress-circle path {
           z-index: 5;
           padding: 10px 18px 10px 10px; }
           .contact-content-form .form-textarea-box__btn:after {
-            content: url(../../images/icon/arrow-right-blue_short.svg);
+            content: url(../images/icon/arrow-right-blue_short.svg);
             display: block;
             position: absolute;
             right: 0px;
@@ -2759,7 +2759,7 @@ body.light .progress-wrap svg.progress-circle path {
           .contact-page .form .home__startbtn.blue-link::before {
             content: none; }
           .contact-page .form .home__startbtn.blue-link::after {
-            content: url(../../images/icon/arrow-blue.svg);
+            content: url(../images/icon/arrow-blue.svg);
             display: block;
             position: absolute;
             left: 0px;
